# jeepyb

./: CONTRIBUTING.md  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
jeepyb/: gerritdb.py  log.py  projects.py  translations.py  utils.py
jeepyb/cmd/: close_pull_requests.py  create_cgitrepos.py  create_hound_config.py  expire_old_reviews.py  manage_projects.py  notify_impact.py  openstackwatch.py  register_zanata_projects.py  track_upstream.py  trivial_rebase.py  update_blueprint.py  update_bug.py  welcome_message.py
jeepyb/config/: subscribers-sample
