[metadata]
name = jeepyb
summary = Tools for managing gerrit projects and external sources.
description-file =
    README.rst
author = OpenStack Infrastructure Team
author-email = openstack-infra@lists.openstack.org
home-page = http://docs.openstack.org/infra/system-config/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[entry_points]
console_scripts =
    close-pull-requests = jeepyb.cmd.close_pull_requests:main
    create-cgitrepos = jeepyb.cmd.create_cgitrepos:main
    create-hound-config = jeepyb.cmd.create_hound_config:main
    expire-old-reviews = jeepyb.cmd.expire_old_reviews:main
    manage-projects = jeepyb.cmd.manage_projects:main
    notify-impact = jeepyb.cmd.notify_impact:main
    openstackwatch = jeepyb.cmd.openstackwatch:main
    process-cache = jeepyb.cmd.process_cache:main
    register-zanata-projects = jeepyb.cmd.register_zanata_projects:main
    trivial-rebase = jeepyb.cmd.trivial_rebase:main
    update-blueprint = jeepyb.cmd.update_blueprint:main
    update-bug = jeepyb.cmd.update_bug:main
    welcome-message = jeepyb.cmd.welcome_message:main
